--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 							<figure>
 								<img src="img/10.jpg" alt=""/>
 								<figcaption>
-									<h3>Web Development</h3>
+									<h3>Experience</h3>
 									<p>Web Development Intern at ThoughtWorks</p>
 								</figcaption>
 							</figure>
